# CMSC488B-Final-Project

final-proj/: README.md  brick-empty.cabal  input.txt
final-proj/src/: FileIO.hs  FourByFourSolver.hs  Game.hs  NineByNineSolver.hs  Parser.hs  QuickCheck.hs  Solver.hs  UI.hs
